<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Player" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/player_line_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_name">

            <Button
                android:id="@+id/line_top"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/top" />

            <Button
                android:id="@+id/line_jgl"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/jgl" />

            <Button
                android:id="@+id/line_mid"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/mid" />

            <Button
                android:id="@+id/line_bot"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/bot" />

            <Button
                android:id="@+id/line_spt"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/spt" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>